@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
       - uses: actions/checkout@v1
@@ -45,10 +45,10 @@ jobs:
         run: |
           pip install -e .[dev]
 
-      - name: fix pywin
-        if: matrix.os == 'windows-latest'
-        shell: bash -l {0}
-        run: pip install pywin32==225
+#      - name: fix pywin
+#        if: matrix.os == 'windows-latest'
+#        shell: bash -l {0}
+#        run: pip install pywin32==225
 
       - name: print package info
         shell: bash -l {0}
